diverse piccole modifiche
README.md: limito lunghezza delle righe a 80 caratteri.  Sul sito
http://creativecommons.org/licenses/by-nc-sa/3.0/deed.it è presente il
riassunto delle licenze in formato leggibile da tutti, non il testo
integrale (che però è facilmente raggiungibile da quella pagina).

TODO.org: aggiungo opzioni `showall' e `logdone' allo startup.

guidaemacsauctex.bib: aggiorno data della guida di AUCTeX e aggiungo
protocollo `http' dove mancante negli URL.

guidaemacsauctex_preambolo.sty: sostituisco opzione `escapeinside' del
pacchetto `listings' con l'opzione `escapechar' (`escapeinside' con
uguali caratteri di apertura e chiusura equivale a `escapechar').

guidaemacsauctex.tex: aggiungo percorsi del file di init su GNU/Linux,
in quel paragrafo tolgo `\textcolor' perché sembra che `\verb' e
`\textcolor' non vadano molto d'accordo.  Aggiorno versione di AUCTeX
dove necessario.  Elimino spaziature di fine riga inessenziali.

--- a/guidaemacsauctex.bib
+++ b/guidaemacsauctex.bib
@@ -17,15 +17,15 @@
   year		= {2010},
   edition	= {16},
   organization	= {Free Software Foundation, Inc.},
-  note		= {\url{www.gnu.org/software/emacs/manual/emacs.pdf}},
+  note		= {\url{http://www.gnu.org/software/emacs/manual/emacs.pdf}},
 }
 
 @MANUAL{auctex:manual,
   author	= {Kresten Krab Thorup and Per Abrahamsen and David Kastrup and others},
   title		= {AUC\TeX, A sophisticated \TeX{} environment for Emacs},
-  year		= {2010},
+  year		= {2012},
   organization	= {Free Software Foundation, Inc.},
-  note		= {\url{www.gnu.org/software/auctex/manual/auctex.pdf}},
+  note		= {\url{http://www.gnu.org/software/auctex/manual/auctex.pdf}},
 }
 
 @MISC{emacsW32:wiki,
