--- a/guidaemacsauctex_preambolo.sty
+++ b/guidaemacsauctex_preambolo.sty
@@ -33,7 +33,7 @@
   breaklines=true,
   showstringspaces=false,
   belowcaptionskip=\bigskipamount,
-  escapeinside={£}{£},
+  escapechar={£},
   literate=
   {à}{{\`a}}1
   {è}{{\`e}}1
