(1) guidaemacsauctex.bib: risulta modificato perché Notepad++ non lo vedeva come UTF8, così ho fatto una conversione;
(2) guidaemacsauctex.tex: ho modificato qualcosa riguardo il file .emacs, ma è ancora tutto *molto* provvisorio

(3) style/guidatematica.el: ho iniziato a scrivere questo file di stile per la classe guidatematica. Deve essere completato e verificato. In futuro magari lo aggiungiamo alla classe ufficiale

--- a/guidaemacsauctex.bib
+++ b/guidaemacsauctex.bib
@@ -1,4 +1,4 @@
-@ARTICLE{emacs:odebari,
+﻿@ARTICLE{emacs:odebari,
   author	= {Onofrio de Bari},
   title		= {{GNU Emacs} e {AUC\TeX} per {\LaTeX}},
   journal	= {Ars\TeX nica},
