(1) guidaemacsauctex.sty --- rinominato il file guidaemacsauctex_preambolo.sty in guidaemacsauctex.sty
(2) guidaemacsauctex.tex --- richiamo il pacchetto .sty con il nuovo nome

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -13,7 +13,7 @@
 \ProvidesFile{guidaemacsauctex.tex}[2013/01/08 v.0.0 Breve guida all'uso di
 Emacs per LaTeX]
 
-\usepackage{guidaemacsauctex_preambolo}
+\usepackage{guidaemacsauctex}
 \usepackage{lipsum}
 
 \begin{document}
